--- a/src/main/webapp/css/upload.scss
+++ b/src/main/webapp/css/upload.scss
@@ -3,6 +3,10 @@
   margin: 0 auto;
   text-align: center;
 
+  .drag-drop-area{
+    border: 2px dashed black;
+  }
+
   .file-list-table {
     width: 95%;
     margin: 2.5%;
