--- a/src/main/webapp/css/upload.scss
+++ b/src/main/webapp/css/upload.scss
@@ -83,3 +83,23 @@
     }
   }
 }
+
+#videoContainer {
+  width: 100%;
+  margin-top: 15px; /* 비디오와 위의 요소 사이에 약간의 여백을 추가 */
+}
+
+#videoPlayer {
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%; /* 16:9 종횡비를 유지하기 위한 패딩 */
+  position: relative;
+}
+
+#videoPlayer video {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
