--- a/src/main/webapp/css/upload.scss
+++ b/src/main/webapp/css/upload.scss
@@ -1,3 +1,66 @@
+body{
+  background-color: rgba(31, 31, 31, 1); //배경 진한색
+  color: white;
+
+}
+.test-view{
+  display: none;
+}
+.body1{
+  .show{
+    position: relative;
+    border-radius: 8px;
+    margin: 10px 10px 0 10px;
+    padding: 5px;
+    background-color: rgba(40, 40, 40, 1);
+    float: left;
+    width: 70%;
+    height: 95%;
+
+  }
+
+  .enter {
+    position: relative;
+    border-radius: 8px;
+    margin-top: 10px;
+    padding: 5px;
+    background-color: rgba(40, 40, 40, 1);
+    float: right;
+    width: 28.5%;
+    height: 95%;
+
+
+  }
+}
+
+#file{
+  margin: 4px;
+}
+
+#storagePath{
+  display: none;
+}
+
+#userID{
+  display: none;
+}
+
+#addFolder{
+  margin: 4px;
+}
+
+#addFolderName{
+  margin: 20px 0 0 4px;
+}
+
+.upload{
+  margin: 20px 4px 0 4px;
+}
+
+.modal{
+  color: black;
+}
+
 .file-list-container {
   width: 100%;
   margin: 0 auto;
@@ -17,6 +80,7 @@
       background-color: blueviolet;
     }
 
+
     tr {
       height: 4em;
 
@@ -33,7 +97,7 @@
       }
 
       th, td {
-        border: 2px solid antiquewhite;
+        border: 5px solid rgba(0, 0, 0, 0.87);
         padding: 0.6em;
       }
 
