--- a/src/main/webapp/css/upload.scss
+++ b/src/main/webapp/css/upload.scss
@@ -61,6 +61,15 @@ body{
   color: black;
 }
 
+.drag{
+  font: initial;
+  color: #505050;
+  font-size: 13px;
+  font-weight: 600;
+  float: right;
+}
+
+
 .file-list-container {
   width: 100%;
   margin: 0 auto;
