--- a/src/main/webapp/css/user.css
+++ b/src/main/webapp/css/user.css
@@ -1,6 +1,8 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:300);
+
 body {
     font-family: Arial, sans-serif;
-    background-color: #1c1c1c;
+    background-color: #696969;
     color: #333;
     margin: 0;
     padding: 0;
@@ -9,37 +11,85 @@ body {
     align-items: center;
     height: 100vh;
 }
-.user-box {
-    width: 550px;
-    height: 250px;
+.row{
+    margin-bottom: 5em;
 }
-.container {
-    background-color: #2e2e2e;
-    padding: 20px;
+.container{
+    color: white;
+    text-align: center;
+}
+.user-profile .user-profile-card {
+    position: relative;
+    padding-top: 0;
+    overflow: hidden;
+}
+.information{
+    text-align: center;
+}
+
+.user-profile-card .user-profile-header {
+    background: url("http://lorempixel.com/850/280/nature/4/");
+    background-size: cover;
+    height: 135px;
+}
+
+.user-profile-card .user-profile-avatar {
+    position: relative;
+    top: -100px;
+    margin-bottom: -100px;
+    padding: 0 15px;
+}
+
+.user-profile-card .user-profile-avatar img {
+    width: 200px;
+    height: 200px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    border: 2px solid rgba(255,255,255,0.5);
+}
+
+.user-profile small {
+    display: block;
+    line-height: 1.428571429;
+    color: #999;
+}
+
+a{
+    text-decoration-line: none;
+    color: #b3b3b3;
+}
+a:link{
+    color: #b3b3b3;
+}
+a:hover{
+    color: white;
+}
+.modal-body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+input[type=password]{
+    border: 0;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    width: 300px;
-    text-align: center;
+    outline: none;
+    background-color: #E2E2E2;
 }
-.user-text h3 {
-    margin-bottom: 20px;
-    color: #bdc3c7;
-    text-align: center;
+.modal-header,
+.modal-body,
+.modal-footer{
+    background-color: #B3B1B1;
 }
-.logout, .advanced-setting, .delete-user {
-    margin-bottom: 10px;
+.modal-header{
+    border-bottom: 0 none;
 }
-input[type="submit"] {
-    width: 100%;
-    padding: 15px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 18px;
-    background-color: #7f8c8d;
-    color: #ecf0f1;
-    transition: background-color 0.3s;
+.modal-footer{
+    border-top: 0 none;
 }
-input[type="submit"]:hover {
-    background-color: #5a5a5a;
+.input-ex-pwd,
+.input-signup-pwd,
+.input-signup-pwd-check{
+    width: 280px;
+    height: 40px;
 }
