--- a/src/main/webapp/css/upload.css
+++ b/src/main/webapp/css/upload.css
@@ -57,6 +57,14 @@ body {
   color: black;
 }
 
+.drag {
+  font: initial;
+  color: #505050;
+  font-size: 13px;
+  font-weight: 600;
+  float: right;
+}
+
 .file-list-container {
   width: 100%;
   margin: 0 auto;
@@ -64,6 +72,7 @@ body {
 }
 .file-list-container .drag-drop-area {
   border: 2px dashed black;
+  min-height: 500px;
 }
 .file-list-container .file-list-table {
   width: 100%;
