-account.css- -account.js- -account.jsp- -userInfo.css- -userInfo.jsp- 디자인 수정 및 함수 추가

--- a/src/main/webapp/css/account.css
+++ b/src/main/webapp/css/account.css
@@ -26,6 +26,11 @@
     box-sizing: border-box;
     font-size: 14px;
 }
+.form input.invalid{
+    border: 1px solid red;
+}
+
+
 .login-login-button,
 .login-signup-button{
     font-family: "Roboto", sans-serif;
