--- a/src/main/webapp/css/userInfo.css
+++ b/src/main/webapp/css/userInfo.css
@@ -11,6 +11,11 @@ body {
     align-items: center;
     height: 100vh;
 }
+.info-header{
+    text-align: center;
+    margin-bottom: 150px;
+    color: #e9ecef;
+}
 .modal-title{
     width: 100%;
     display: flex;
