--- a/src/main/webapp/css/upload.css
+++ b/src/main/webapp/css/upload.css
@@ -15,17 +15,16 @@ body {
   padding: 5px;
   background-color: rgb(40, 40, 40);
   float: left;
-  width: 70%;
+  width: 60%;
   height: 95%;
 }
 .body1 .enter {
-  position: relative;
+  display: inline-block;
   border-radius: 8px;
   margin-top: 10px;
   padding: 5px;
   background-color: rgb(40, 40, 40);
-  float: right;
-  width: 28.5%;
+  width: 24%;
   height: 95%;
 }
 
@@ -54,6 +53,15 @@ body {
 }
 
 .modal {
+  color: black;
+}
+
+#clicked {
+  display: none;
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  background-color: white;
   color: black;
 }
 
