관리자 유저 초기화 버튼 구현

--- a/src/main/webapp/css/upload.scss
+++ b/src/main/webapp/css/upload.scss
@@ -113,7 +113,7 @@ body{
 
       .folder-area:hover {
         cursor: pointer;
-        background-color: aquamarine;
+        background-color: grey;
       }
 
       .folder-area::before {
