--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -6,33 +6,37 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 .btn{
-    padding: 15px 30px;
+    padding: 20px 35px;
+    background-color: #D2A76D;
+}
+.btn:hover{
+    background-color: #DEB887;
 }
 a:link{
     text-decoration: none;
-    color: #ced4da;
+    color: #E6C29A;
 }
 a:visited{
     text-decoration: none;
-    color: #ced4da;
+    color: #E6C29A;
 }
 a:active{
     text-decoration: none;
-    color: #ced4da;
+    color: #E6C29A;
 }
 a:hover{
     text-decoration: none;
-    color: #ced4da;
+    color: #E6C29A;
 }
 .body-link {
     margin-top: 80px;
     font-size: 30px;
-    margin-left: 300px;
+    margin-left: 280px;
 }
 .body-header{
-    margin-left: 10px;
+    text-align: center;
     color: #b3b3b3;
-    font-size: 34px;
+    font-size: 55px;
 }
 .body-middle>.btn{
     margin-left: 150px;
@@ -50,6 +54,7 @@ a:hover{
 .first-text{
     margin-top: 400px;
     margin-left: 850px;
+    width: 850px;
 }
 .second-text{
     margin-left: 150px;
@@ -59,4 +64,5 @@ a:hover{
     margin-top: 300px;
     margin-left: 850px;
     margin-bottom: 150px;
+    width: 850px;
 }
