오른쪽 클릭시 div 보이기

--- a/src/main/webapp/css/upload.scss
+++ b/src/main/webapp/css/upload.scss
@@ -61,7 +61,7 @@ body{
 }
 
 #clicked{ //오른쪽 클릭했을때 나올 div
-  display: none;
+  //display: none;
   position: absolute;
   width: 200px;
   height: 200px;
