--- a/src/main/webapp/css/sidebar.scss
+++ b/src/main/webapp/css/sidebar.scss
@@ -2,10 +2,16 @@
   width: 250px;
   background-color: #2c3e50;
   color: #ecf0f1;
-  display: inline-block;
+  //display: inline-block;
+  position: absolute;
+  top: 0;
+  left: -250px;
   float: left;
   height: 100%;
   padding-top: 20px;
+  //display: none;
+  transition: left 0.3s ease;
+  z-index: 999;
 
   &-header {
     text-align: center;
