--- a/src/main/webapp/css/header.scss
+++ b/src/main/webapp/css/header.scss
@@ -54,8 +54,8 @@
   .dropdown-menu {
     display: none;
     position: absolute;
-    top: 100%;
-    right: 0;
+    top: 8%;
+    right: 11px;
     width: 200px;
     padding: 8px 0;
     border-radius: 4px;
@@ -123,6 +123,6 @@
 
   .dropdown-menu ul a:hover {
     color: #fff;
-    background-color: #0366d6;
+    background-color: #868e96;
   }
 }
