-announcements.jsp- -announcements.css- 공지게시판 메인
-write.jsp-
-write.css-
공지사항 작성 페이지

-header.scss-
사진 경로 변경

--- a/src/main/webapp/css/header.scss
+++ b/src/main/webapp/css/header.scss
@@ -34,7 +34,7 @@
   }
   
   .dropdown-button{
-    background: url("usericon.png") no-repeat;
+    background: url("../img/usericon.png") no-repeat;
     background-size: 46px 46px;
     width: 46px;
     height: 46px;
