--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -3,7 +3,7 @@ body {
     font-family: "Roboto", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-image: url("v1016-b-08.jpg");
+    background-image: url("../img/v1016-b-08.jpg");
     background-size: 1750px;
 }
 .main-body{
