--- a/src/main/webapp/css/header.scss
+++ b/src/main/webapp/css/header.scss
@@ -22,18 +22,18 @@
   .sidebar-open:hover {
     cursor: pointer;
 
-    .stroke-current{
+    .stroke-current {
       stroke: #fff;
     }
   }
 
-  .user{
+  .user {
     margin-left: auto;
     display: flex;
     align-items: center;
   }
-  
-  .dropdown-button{
+
+  .dropdown-button {
     background: url("../img/usericon.png") no-repeat;
     background-size: 46px 46px;
     width: 46px;
@@ -66,7 +66,7 @@
     box-shadow: 0 1px 15px rgba(27, 31, 35, 0.15);
     transition: transform 200ms ease-in;
 
-    .islogin{
+    .islogin {
       display: none;
     }
   }
@@ -131,5 +131,93 @@
   .dropdown-menu ul a:hover {
     color: #fff;
     background-color: #868e96;
+  }
+}
+
+/* 모달 */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+  text-align: center;
+
+  a {
+    text-decoration-line: none;
+  }
+
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 25%;
+    min-height: 600px;
+
+    h2 {
+      margin-bottom: 30px;
+    }
+  }
+
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    width: 20px;
+
+    &:hover,
+    &:focus {
+      color: black;
+      text-decoration: none;
+      cursor: pointer;
+    }
+  }
+
+  .announcement-container {
+
+    .announcement-list {
+
+      .announcement-title-container {
+
+        cursor: pointer;
+        display: flex;
+        margin-bottom: 10px;
+
+        .announcement-title {
+          margin-left: 60px;
+        }
+
+        .announcement-uploaddate {
+          margin-left: 120px;
+          position: relative;
+
+          &::after {
+            width: 20px;
+            height: 20px;
+            border-top: 5px solid #121212;
+            border-right: 5px solid #121212;
+            display: inline-block;
+            transform: rotate(135deg);
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            content: "";
+          }
+        }
+      }
+    }
+  }
+}
+
+#announcementModal {
+  .hide {
+    display: none;
   }
 }
