사이드바 로그인 유무 체크

--- a/src/main/webapp/css/sidebar.scss
+++ b/src/main/webapp/css/sidebar.scss
@@ -32,6 +32,10 @@
     list-style: none;
     padding: 0;
 
+    li:nth-of-type(2){
+      display: none;
+    }
+
     li {
       margin: 0;
       padding: 0;
