--- a/src/main/webapp/css/admin.scss
+++ b/src/main/webapp/css/admin.scss
@@ -13,3 +13,8 @@ canvas {
   width: 100% !important; /* 차트가 컨테이너의 너비를 채우도록 설정 */
   height: auto !important;
 }
+
+#activityLog {
+  max-height: 300px; /* 최대 높이 설정 */
+  overflow-y: auto; /* 세로 스크롤 설정 */
+}
