--- a/src/main/webapp/css/header.scss
+++ b/src/main/webapp/css/header.scss
@@ -1,7 +1,7 @@
 .header {
   height: 4rem;
   margin: 0;
-  background-color: #343a40;
+  background-color: #adb5bd;
   display: flex;
   align-items: center;
 
@@ -144,9 +144,26 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
   text-align: center;
+  overflow-y: initial !important;
+
+  ::-webkit-scrollbar{
+    width: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb{
+    background-color: #2f3542;
+    border-radius: 10px;
+    background-clip: padding-box;
+    border: 2px solid transparent;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: #fefefe;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+  }
 
   a {
     text-decoration-line: none;
@@ -154,15 +171,17 @@
 
   .modal-content {
     background-color: #fefefe;
-    margin: 15% auto;
+    margin: 10% auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 25%;
-    min-height: 600px;
+    width: 500px;
+    overflow-y: auto;
+    max-height: 550px;
+  }
 
-    h2 {
-      margin-bottom: 30px;
-    }
+  .accordion-body {
+    max-height: 200px;
+    overflow-y: auto;
   }
 
   .close {
@@ -199,15 +218,14 @@
           position: relative;
 
           &::after {
-            width: 20px;
-            height: 20px;
-            border-top: 5px solid #121212;
-            border-right: 5px solid #121212;
+            width: 15px;
+            height: 15px;
+            border-top: 2px solid #121212;
+            border-right: 2px solid #121212;
             display: inline-block;
             transform: rotate(135deg);
-            position: absolute;
-            top: 10px;
-            left: 10px;
+            margin-left: 65px;
+            position: relative;
             content: "";
           }
         }
