--- a/src/main/webapp/css/header.scss
+++ b/src/main/webapp/css/header.scss
@@ -66,7 +66,7 @@
     box-shadow: 0 1px 15px rgba(27, 31, 35, 0.15);
     transition: transform 200ms ease-in;
 
-    .islogin {
+    .islogin, .notlogin {
       display: none;
     }
   }
