log 기록 색상 추가. 링크 공유 다운로드 처리

--- a/src/main/webapp/css/admin.scss
+++ b/src/main/webapp/css/admin.scss
@@ -18,3 +18,16 @@ canvas {
   max-height: 300px; /* 최대 높이 설정 */
   overflow-y: auto; /* 세로 스크롤 설정 */
 }
+
+ .log-info {
+   color: green;
+ }
+.log-error {
+  color: red;
+}
+.log-warning {
+  color: orange;
+}
+.log-debug {
+  color: blue;
+}
