-admin.scss- 로그 내용에 border 추가

--- a/src/main/webapp/css/admin.scss
+++ b/src/main/webapp/css/admin.scss
@@ -99,6 +99,11 @@ body{
   flex-wrap: wrap;
 }
 
+#logText{
+  border: 1px solid red;
+  border-radius: 7px;
+}
+
 .chart-item {
   flex: 1 1 calc(20% - 20px); /* 5개씩 배치하고 간격을 고려한 너비 */
   margin: 10px; /* 각 차트 간의 간격 */
