-admin.jsp- -admin.js- -admin.scss- -header.js- 어드민에서 로그아웃 기능 추가 아코디언에 뜨는 날짜 수정

--- a/src/main/webapp/css/admin.scss
+++ b/src/main/webapp/css/admin.scss
@@ -63,6 +63,15 @@ body{
   font-size: 13px;
 }
 
+a.logout-link{
+  text-decoration-line: none;
+  color: white;
+}
+
+a.logout-link:hover{
+  color: #5a5a5a;
+}
+
 #minFileSizeUnit,
 #maxFileSizeUnit{
   max-width: 67px;
