--- a/src/main/webapp/css/upload.scss
+++ b/src/main/webapp/css/upload.scss
@@ -1,14 +1,17 @@
-body{
+body {
   background-color: rgba(31, 31, 31, 1); //배경 진한색
   color: white;
 
 }
-.test-view{
+
+.test-view {
   display: none;
 }
-.body1{
+
+.body1 {
   height: calc(100% - 4rem);
-  .show{
+
+  .show {
     position: relative;
     border-radius: 8px;
     margin: 10px 10px 0 10px;
@@ -21,6 +24,7 @@ body{
   }
 
   .enter {
+    position: relative;
     display: inline-block;
     border-radius: 8px;
     margin-top: 10px;
@@ -29,38 +33,134 @@ body{
     width: 28%;
     height: calc(100% - 15px);
 
+
+    #uploadForm {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      //margin: 140% 5px 0 5px;
+      //background-color: blue;
+
+      //파일선택
+      .filebox .upload-name { //text
+        display: inline-block;
+        height: 40px;
+        padding: 0 10px;
+        vertical-align: middle;
+        border: 1px solid black;
+        border-radius: 3px;
+        width: 62%;
+        color: #999999;
+        margin-left: 1px;
+      }
+
+      .filebox label { //botton
+        display: inline-block;
+        padding: 10px 20px;
+        color: #fff;
+        vertical-align: middle;
+        background-color: #404040;
+        cursor: pointer;
+        width: calc(100% - 62% - 12px);
+        height: 40px;
+        margin-left: 2px;
+        border-radius: 3px;
+        text-align: center;
+      }
+
+      .filebox label:hover {
+        background-color: gray;
+      }
+
+      .filebox input[type="file"] {
+        position: absolute;
+        width: 0;
+        height: 0;
+        padding: 0;
+        overflow: hidden;
+        border: 0;
+
+      }
+
+      //폴더선택
+      .add_folder {
+        margin-top: 3px;
+
+        #addFolderName {
+          border-radius: 4px;
+          padding: 0 9px;
+          width: 62%;
+          height: 40px;
+        }
+
+        #addFolder { //button
+          background-color: #404040;
+          padding: 5px 14px;
+          color: white;
+          width: calc(100% - 62% - 33px);
+          height: 40px;
+          margin-left: 3px;
+          border: 1px solid black;
+          border-radius: 3px;
+        }
+
+        #addFolder:hover {
+          background-color: gray;
+        }
+      }
+
+      //upload
+      .upload {
+        margin-top: 10px;
+        margin-left: 2px;
+        text-align: center;
+
+        #uploadbtn {
+          width: 100%;
+          height: 40px;
+          background-color: #404040;
+          color: white;
+          border-radius: 2px;
+        }
+
+        #uploadbtn:hover {
+          background-color: gray;
+        }
+      }
+
+    }
   }
 }
 
-#file{
+#file {
   margin: 4px;
 }
 
-#storagePath{
+#storagePath {
   display: none;
 }
 
-#userID{
+#userID {
   display: none;
 }
 
-#addFolder{
+#addFolder {
   margin: 4px;
 }
 
-#addFolderName{
+#addFolderName {
   margin: 20px 0 0 4px;
 }
 
-.upload{
+.upload {
   margin: 20px 4px 0 4px;
 }
 
-.modal{
+.modal {
   color: black;
 }
 
-#clicked{ //오른쪽 클릭했을때 나올 div
+#clicked { //오른쪽 클릭했을때 나올 div
   display: none;
   border-radius: 5px;
   position: absolute;
@@ -70,13 +170,13 @@ body{
   margin: 10px;
 }
 
-.btn{
+.btn {
   margin: 15px 10px 15px 10px;
   background-color: #2e2e2e;
   border: none;
 }
 
-.drag{
+.drag {
   font: initial;
   color: #505050;
   font-size: 13px;
@@ -121,7 +221,7 @@ body{
         text-align: left;
       }
 
-      th:nth-child(n+1){
+      th:nth-child(n+1) {
         border-top: 0;
       }
 
