--- a/src/main/webapp/css/upload.scss
+++ b/src/main/webapp/css/upload.scss
@@ -41,6 +41,10 @@ body {
       //margin: 140% 5px 0 5px;
       //background-color: blue;
 
+      .add_file, .add_folder{
+        height: 3.5rem;
+      }
+
       //파일선택
       .filebox .upload-name { //text
         display: inline-block;
@@ -58,6 +62,7 @@ body {
         display: inline-block;
         padding: 10px 20px;
         color: #fff;
+        border: 2px solid black;
         vertical-align: middle;
         background-color: #404040;
         cursor: pointer;
@@ -84,24 +89,33 @@ body {
 
       //폴더선택
       .add_folder {
-        margin-top: 3px;
 
         #addFolderName {
-          border-radius: 4px;
-          padding: 0 9px;
-          width: 62%;
+          float: left;
+          display: inline-block;
           height: 40px;
+          padding: 0 10px;
+          vertical-align: middle;
+          border: 1px solid black;
+          border-radius: 3px;
+          width: 62%;
+          color: #999999;
+          margin-left: 1px;
         }
 
         #addFolder { //button
+          float: left;
+          display: inline-block;
+          padding: 10px 20px;
+          color: #fff;
+          vertical-align: middle;
           background-color: #404040;
-          padding: 5px 14px;
-          color: white;
-          width: calc(100% - 62% - 33px);
+          cursor: pointer;
+          width: calc(100% - 62% - 12px);
           height: 40px;
-          margin-left: 3px;
-          border: 1px solid black;
+          margin-left: 8px;
           border-radius: 3px;
+          text-align: center;
         }
 
         #addFolder:hover {
@@ -142,14 +156,6 @@ body {
 
 #userID {
   display: none;
-}
-
-#addFolder {
-  margin: 4px;
-}
-
-#addFolderName {
-  margin: 20px 0 0 4px;
 }
 
 .upload {
