--- a/src/main/webapp/css/upload.scss
+++ b/src/main/webapp/css/upload.scss
@@ -193,6 +193,8 @@ body {
 
 .file-list-container {
   width: 100%;
+  height: 100%;
+  overflow-y: scroll;
   margin: 0 auto;
   text-align: center;
   min-height: 100%;
