--- a/src/main/webapp/css/upload.scss
+++ b/src/main/webapp/css/upload.scss
@@ -190,7 +190,6 @@ body {
   float: right;
 }
 
-
 .file-list-container {
   width: 100%;
   height: 100%;
@@ -306,4 +305,13 @@ body {
   position: absolute;
   top: 0;
   left: 0;
+}
+
+#shareLink {
+  display: inline-block;
+  max-width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  vertical-align: bottom;
 }
