--- a/src/main/webapp/css/admin.scss
+++ b/src/main/webapp/css/admin.scss
@@ -144,3 +144,11 @@ canvas {
 .log-debug {
   color: blue;
 }
+
+#logCarousel{
+  .list-group-item:hover{
+    background-color: #2c3e50;
+    cursor: pointer;
+    border-radius: 2em;
+  }
+}
