--- a/src/main/webapp/css/admin.scss
+++ b/src/main/webapp/css/admin.scss
@@ -146,9 +146,38 @@ canvas {
 }
 
 #logCarousel{
+  position: relative;
+
+  .list-group-item{
+    border-radius: 2em;
+    margin-bottom: 10px;
+  }
   .list-group-item:hover{
-    background-color: #2c3e50;
+    background-color: #5189bd;
     cursor: pointer;
     border-radius: 2em;
   }
+}
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  background-color: #343a40; /* Dark color */
+  border-radius: 50%;
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 5%;
+}
+.carousel-control-prev {
+  left: -5%;
+}
+.carousel-control-next {
+  right: -5%;
+}
+
+.row{
+  margin-right: 45px;
 }
