--- a/src/main/webapp/css/upload.scss
+++ b/src/main/webapp/css/upload.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: rgba(31, 31, 31, 1); //배경 진한색
+  background-color: rgba(31, 31, 31, 1);
   color: white;
 
 }
@@ -37,9 +37,7 @@ body {
     #uploadForm {
       position: absolute;
       bottom: 0;
-      width: 100%;
-      //margin: 140% 5px 0 5px;
-      //background-color: blue;
+      width: 99%;
 
       .add_file, .add_folder{
         height: 3.5rem;
@@ -56,13 +54,14 @@ body {
         width: 62%;
         color: #999999;
         margin-left: 1px;
+
       }
 
-      .filebox label { //botton
+      .filebox label { //button
         display: inline-block;
         padding: 10px 20px;
         color: #fff;
-        border: 2px solid black;
+        border: 1px solid black;
         vertical-align: middle;
         background-color: #404040;
         cursor: pointer;
@@ -90,7 +89,7 @@ body {
       //폴더선택
       .add_folder {
 
-        #addFolderName {
+        #addFolderName { //foldername
           float: left;
           display: inline-block;
           height: 40px;
@@ -116,6 +115,8 @@ body {
           margin-left: 8px;
           border-radius: 3px;
           text-align: center;
+          border: 1px solid black;
+
         }
 
         #addFolder:hover {
@@ -135,6 +136,8 @@ body {
           background-color: #404040;
           color: white;
           border-radius: 2px;
+          border: 1px solid black;
+          margin-right: 2px;
         }
 
         #uploadbtn:hover {
@@ -193,7 +196,8 @@ body {
 .file-list-container {
   width: 100%;
   height: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
+
   margin: 0 auto;
   text-align: center;
   min-height: 100%;
