--- a/src/main/webapp/css/header.scss
+++ b/src/main/webapp/css/header.scss
@@ -143,16 +143,15 @@
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow: hidden; /* 페이지 스크롤을 막기 위해 overflow: hidden 추가 */
   background-color: rgba(0, 0, 0, 0.4);
   text-align: center;
-  overflow-y: initial !important;
 
-  ::-webkit-scrollbar{
+  ::-webkit-scrollbar {
     width: 10px;
   }
 
-  ::-webkit-scrollbar-thumb{
+  ::-webkit-scrollbar-thumb {
     background-color: #2f3542;
     border-radius: 10px;
     background-clip: padding-box;
@@ -175,13 +174,17 @@
     padding: 20px;
     border: 1px solid #888;
     width: 750px;
+    height: 80vh; /* 고정 높이로 설정하여 모달 내부에서 스크롤되도록 함 */
     overflow-y: auto;
-    max-height: 650px;
+    max-height: 70vh;
   }
 
   .accordion-body {
-    max-height: 300px;
-    overflow-y: auto;
+    max-height: none; /* 아코디언 내용에 스크롤이 생기지 않도록 */
+    overflow-y: auto; /* 아코디언 내용이 넘칠 경우 내부에서 스크롤되도록 */
+    transition: max-height 0.3s ease;
+    word-wrap: break-word; /* 긴 단어나 URL을 줄바꿈 */
+    white-space: pre-wrap; /* 줄바꿈을 허용하고, 공백을 유지 */
   }
 
   .close {
@@ -200,12 +203,11 @@
   }
 
   .announcement-container {
-
-    span{
+    span {
       display: inline-block;
     }
 
-    .accordion-name{
+    .accordion-name {
       width: 450px;
       height: 20px;
       overflow: hidden;
@@ -233,14 +235,12 @@
       }
     }
 
-    .accordion-date{
+    .accordion-date {
       margin-left: 20px;
     }
 
     .announcement-list {
-
       .announcement-title-container {
-
         cursor: pointer;
         display: flex;
         margin-bottom: 10px;
