--- a/src/main/webapp/css/header.scss
+++ b/src/main/webapp/css/header.scss
@@ -1,7 +1,7 @@
 .header {
   height: 4rem;
   margin: 0;
-  background-color: #adb5bd;
+  background-color: rgba(90, 88, 88, 0.53);
   display: flex;
   align-items: center;
 
