--- a/src/main/webapp/css/sidebar.scss
+++ b/src/main/webapp/css/sidebar.scss
@@ -1,6 +1,6 @@
 .sidebar {
   width: 250px;
-  background-color: #2c3e50;
+  background-color: #131317;
   color: #ecf0f1;
   //display: inline-block;
   position: absolute;
