--- a/src/main/webapp/css/sidebar.scss
+++ b/src/main/webapp/css/sidebar.scss
@@ -48,7 +48,7 @@
 
         &:hover,
         &.active {
-          background-color: #5189bd;
+          background-color: #575b5d;
         }
       }
 
