이메일 인증 버튼 꾸미기

--- a/src/main/webapp/css/account.css
+++ b/src/main/webapp/css/account.css
@@ -109,3 +109,16 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+.validate-email-btn{
+    background-color: #94989a;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+.validate-email-btn:hover {
+    background-color: #2a2929;
+}
