--- a/src/main/webapp/css/admin.scss
+++ b/src/main/webapp/css/admin.scss
@@ -217,10 +217,6 @@ body {
   }
 }
 
-.list-group {
-  cursor: pointer;
-}
-
 #search-button {
   height: 40px;  // 버튼 높이를 키움
   width: 100px;  // 버튼 너비를 키움
@@ -299,6 +295,7 @@ a.logout-link:hover {
   flex: 1 1 calc(20% - 20px); // 5개씩 배치하고 간격을 고려한 너비
   margin: 10px; // 각 차트 간의 간격
   box-sizing: border-box;
+  max-width: 162px;
 }
 
 canvas {
@@ -308,7 +305,11 @@ canvas {
 
 #activityLog {
   max-height: 300px; // 최대 높이 설정
+  width: 80%; //
   overflow-y: auto; // 세로 스크롤 설정
+  .real-activity-log{
+    width: 80%;
+  }
 }
 
 .log-info {
