--- a/src/main/webapp/css/upload.scss
+++ b/src/main/webapp/css/upload.scss
@@ -349,3 +349,19 @@ body {
   text-overflow: ellipsis;
   vertical-align: bottom;
 }
+
+
+#user-storage-size-view {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+.storage-progress-con {
+  width: 100%;
+  height: 20px;
+}
+.storage-text {
+  margin-left: 10px;
+  font-weight: bold;
+}
