--- a/src/main/webapp/css/admin.scss
+++ b/src/main/webapp/css/admin.scss
@@ -306,6 +306,10 @@ canvas {
 #activityLog {
   max-height: 300px; // 최대 높이 설정
   overflow-y: auto; // 세로 스크롤 설정
+  width: 100%;
+  .list-group-item{
+    width:100% !important;
+  }
 }
 
 .log-info {
